--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Barcode Reader
+Barcode Check
 
-use barcode reader to get info
+Use barcode reader to obtain document number for further manipulation.
+
+All code are in testing stage, Install / Use of the code may damage the machine and we will not response for any loss!
